--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Prompt Tracer",
+  "name": "Prompt Tracer - AI Prompt Optimizer",
   "version": "1.0.0",
-  "description": "Trace and optimize prompts across LLM platforms",
+  "description": "Transform your AI interactions with intelligent prompt analysis and optimization. Works on ChatGPT, Claude, Grok, and Gemini. Privacy-first, educational, and completely free.",
+  "author": "Prompt Tracer Team",
+  "homepage_url": "https://github.com/yourusername/prompt_tracer",
   "permissions": [
     "activeTab",
     "storage",
@@ -34,11 +36,27 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Prompt Tracer"
+    "default_title": "Prompt Tracer - AI Prompt Optimizer",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon48.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "icons": {
     "16": "icons/icon16.png",
+    "32": "icons/icon48.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 } 
